--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://iamsixthousand.github.io/english-for-kids",
   "name": "english-for-kids",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +23,8 @@
     "lint": "eslint \"**/*.ts\" \"**/*.tsx\"",
     "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "prettier": {
     "singleQuote": true,
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/gh-pages": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
@@ -57,6 +60,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.4.1"
   }
 }
