--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "i18next": "^21.3.3",
+    "idb": "^6.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
