--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint --fix\"**/*.ts\" \"**/*.tsx\"",
+    "lint": "eslint --fix\"**/*.ts\" \"**/*.tsx\" \"**/*.scss\"",
     "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
