--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/ban-types": "off",
         "no-use-before-define": "off",
+        "react-hooks/exhaustive-deps": "off",
         "@typescript-eslint/no-use-before-define": [
             "error"
         ],
