--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint --fix\"**/*.ts\" \"**/*.tsx\" \"**/*.scss\"",
+    "lint": "eslint --fix\"**/*.ts\" \"**/*.tsx\"",
     "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prepare": "husky install",
+    "precommit": "lint-staged"
   },
   "prettier": {
     "singleQuote": true,
@@ -83,6 +85,15 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.2.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "prettier": "^2.4.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,scss,css,json}": [
+      "eslint --fix --max-warnings=0",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
