--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint --fix\"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint": "eslint --fix\"src/**/*.{ts,tsx}\"",
     "format": "prettier --write src/**/*.{ts,tsx,scss,css,json}",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -90,8 +90,7 @@
     "prettier": "^2.4.1"
   },
   "lint-staged": {
-    "\"src/*.{ts,tsx,json,scss}\"": [
-      "eslint --fix --max-warnings=0",
+    "src/*.{ts,tsx,json,scss}": [
       "prettier --write"
     ]
   }
