--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "prettier": "^2.4.1"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx,json,scss}": [
-      "prettier --write"
+    ".": [
+      "prettier --write src/**/*.{ts,tsx,scss,css,json}"
     ]
   }
 }
