--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "prettier": "^2.4.1"
   },
   "lint-staged": {
-    "\"src/**/*.{ts,tsx}\"": [
+    "src/**/*.{ts,tsx}": [
       "eslint --fix"
     ],
     "src/**/*.{ts,tsx,json,scss}": [
