--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "build": "react-scripts build",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
+    "stylelint": "stylelint src/**/*.scss",
+    "stylelint:fix": "npm run stylelint -- --fix",
     "format": "prettier src/**/*.{ts,tsx,scss,css,json}",
     "format:fix": "npm run format -- --write",
     "test": "react-scripts test",
@@ -89,11 +91,16 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard-scss": "^3.0.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "eslint --fix"
+    ],
+    "src/**/*.scss": [
+      "stylelint --fix"
     ],
     "src/**/*.{ts,tsx,json,scss}": [
       "prettier --write"
